--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -15,12 +15,6 @@ body {
     justify-content: center;
 }
 
-.form_wrap {
-    justify-content: center;
-    align-items: center;
-    max-width: 150px;
-    margin-bottom: 25px;
-}
 
 input {
     appearance: none;
@@ -45,7 +39,7 @@ button {
     border: 1px solid black;
     background-color: white;
     color: black;
-    font-family: inherit;
+    font-family: 'Press Start 2P', cursive;
     font-weight: 600;
     border-radius: 5px;
     border-color: black;
@@ -53,18 +47,20 @@ button {
   }
   
   button:hover {
-    background-color: black;
+    background-color: darkgreen;
     color: white;
   }
 
   .right_side {
     margin-left: 40px;
+    margin-top: 40px;
   }
 
   .left_side {
     margin-top: 23px;
     margin-right: 50px;
   }
+
 
 
 
